Fix bug where IE11 not showing loggin screen

--- a/src/rb-site/rb-site.css
+++ b/src/rb-site/rb-site.css
@@ -14,4 +14,5 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh; /* 1 */
+    height: 100px;
 }
