--- a/src/rg-site/rg-site.css
+++ b/src/rg-site/rg-site.css
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh; /* 1 */
+    height: 100px;
 }
 
 .RgSite-middle {
